# graphql2python

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check.yml  github-page.yml  publish.yml  static.yml
docs/source/: conf.py  examples.rst  gql.rst  guides.rst  index.rst  model.rst  query.rst  usage.rst
graphql2python/: __init__.py  __main__.py  __version__.py  imports.py
graphql2python/model/: __init__.py  config.py  generate.py  render.py
graphql2python/model/templates/: docstring.jinja2  enum.jinja2  object.jinja2  scalar.jinja2  union.jinja2
graphql2python/query/: __init__.py  types.py
graphql2python/query/templates/: field.jinja2
graphql2python/template/: __init__.py  template.py
graphql2python/template/templates/pydantic/: comment.jinja2  scalar.jinja2
graphql2python/type/: __init__.py  definition.py  definitions.py  schema.py
graphql2python/utils/: __init__.py  graphlib.py
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
tests/: test_imports.py
tests/tests_model/: test_config.py  test_exist_templates.py  test_render_comment.py  test_render_docstring.py  test_render_enum.py  test_render_field.py  test_render_interface.py  test_render_object.py  test_render_scalar.py  test_render_union.py  test_render_utils.py
tests/tests_model/tests_docs_examples/test_custom_scalar/: input.graphql  output.py  test_custom_scalar.py
tests/tests_model/tests_docs_examples/test_interfaces/: input.graphql  output.py  test_interfaces.py
tests/tests_model/tests_docs_examples/test_unique_union/: input.graphql  output.py  test_unique_union.py
tests/tests_query/: data.py  test_argument.py  test_directive.py  test_exist_templates.py  test_field.py  test_fragment.py  test_inline_fragment.py  test_operation.py  test_query.py  test_variable.py
tests/tests_template/: test_templates_manager.py
tests/tests_template/tests_comment/: test_custom_template.py  test_render_comment.py
tests/tests_template/tests_comment/custom_templates/: comment.jinja2
tests/tests_template/tests_scalar/: test_custom_comment.py  test_custom_scalar.py  test_custom_templates.py  test_render_scalar.py
tests/tests_template/tests_scalar/data/custom_comment/: comment.jinja2
tests/tests_template/tests_scalar/data/custom_scalar/: scalar.jinja2
tests/tests_template/tests_scalar/data/custom_templates/: comment.jinja2  scalar.jinja2
tests/tests_type/: test_definitions.py
