[metadata]
name = graphql2python
summary = Tools for GraphQL client in python.
url = https://github.com/denisart/graphql2python
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
  jinja2>=3.1, <3.2
  pydantic>=1.10, <1.11

[options.extras_require]
test =
  pytest>=7.2, <7.3
  pytest-mock>=3.10, <3.11
  pytest-cov>=3.0, <3.1
dev =
  mypy>=0.991, <0.992
  pylint>=2.15, <2.16
  isort==5.10, <5.11


[options.packages.find]
exclude =
  examples*
  tools*
  docs*
  tests*
  venv*
  build*